--- a/language/.en.json
+++ b/language/.en.json
@@ -44,7 +44,7 @@
       "fields": [
         {
           "label": "Words or phrases",
-          "description": "Use one line for each word, phrase or number. If this field is left blank, random numbers will be used."
+          "description": "Use one line for each word and phrase."
         }
       ]
     },
