--- a/language/nl.json
+++ b/language/nl.json
@@ -26,8 +26,7 @@
         {
           "label": "Spelen met woorden"
         }
-      ],
-      "default": "woorden"
+      ]
     },
     {
       "label": "Woorden of zinnen",
@@ -75,6 +74,10 @@
     {
       "label": "Tekst voor \"Opnieuw\"-knop",
       "default": "Opnieuw"
+    },
+    {
+      "label": "Assistive technology description for \"Retry\" button",
+      "default": "Retry the task. Reset all responses and start the task over again."
     }
   ]
 }
