--- a/language/de.json
+++ b/language/de.json
@@ -26,8 +26,7 @@
         {
           "label": "Spiele mit Wörtern"
         }
-      ],
-      "default": "Wörter"
+      ]
     },
     {
       "label": "Wörter oder Phrasen",
@@ -75,6 +74,10 @@
     {
       "label": "Text für den \"Wiederholen\"-Knopf",
       "default": "Wiederholen"
+    },
+    {
+      "label": "Assistive technology description for \"Retry\" button",
+      "default": "Retry the task. Reset all responses and start the task over again."
     }
   ]
 }
