--- a/language/lv.json
+++ b/language/lv.json
@@ -26,7 +26,6 @@
           "label": "Spēlēt ar vārdiem"
         }
       ],
-      "default": "vārdi",
       "description": "Izvēlieties spēles režīmu. Cipari tiks aizpildīti automātiski, vārdi jānorāda."
     },
     {
@@ -75,6 +74,10 @@
     {
       "label": "Pogas \"Mēģināt vēlreiz\" teksts",
       "default": "Mēģināt vēlreiz"
+    },
+    {
+      "label": "Assistive technology description for \"Retry\" button",
+      "default": "Retry the task. Reset all responses and start the task over again."
     }
   ]
 }
