--- a/language/ko.json
+++ b/language/ko.json
@@ -55,6 +55,20 @@
       ]
     },
     {
+      "label": "Audio",
+      "description": "You can customize the audio appearance here.",
+      "fields": [
+        {
+          "label": "Selected/unselected a field",
+          "description": "Sound to play when a field is selected or unselected."
+        },
+        {
+          "label": "Completed row or column",
+          "description": "Sound to play when the user has selected a complete row or column."
+        }
+      ]
+    },
+    {
       "label": "행동설정",
       "description": "이 옵션을 사용하면 작업 동작을 제어할 수 있습니다.",
       "fields": [
