--- a/language/.en.json
+++ b/language/.en.json
@@ -50,13 +50,14 @@
         },
         {
           "label": "Background Color",
-          "description": "Background color for the board."
+          "description": "Background color for the board.",
+          "default": ""
         }
       ]
     },
     {
       "label": "Audio",
-      "description": "You can customize the audio appearance here.",
+      "description": "You can customize audio here.",
       "fields": [
         {
           "label": "Selected/unselected a field",
