--- a/language/de.json
+++ b/language/de.json
@@ -50,13 +50,14 @@
         },
         {
           "label": "Hintergrundfarbe",
-          "description": "Hintergrundfarbe für das Spielfeld."
+          "description": "Hintergrundfarbe für das Spielfeld.",
+          "default": ""
         }
       ]
     },
     {
       "label": "Audio",
-      "description": "You can customize the audio appearance here.",
+      "description": "You can customize audio here.",
       "fields": [
         {
           "label": "Selected/unselected a field",
