Remove empty default from semantics

--- a/language/.en.json
+++ b/language/.en.json
@@ -50,8 +50,7 @@
         },
         {
           "label": "Background Color",
-          "description": "Background color for the board.",
-          "default": ""
+          "description": "Background color for the board."
         }
       ]
     },
