--- a/language/.en.json
+++ b/language/.en.json
@@ -82,6 +82,25 @@
         {
           "label": "Set joker",
           "description": "Will place an unturnable joker in the center of the board if its size is odd."
+        },
+        {
+          "label": "Height limit mode",
+          "description": "Decide if you want to limit the board height to fit the visible area. Automatic detection may not be perfect depending on your website's setup, e.g. if it has sticky top navigation bars. Good custom values are hard to set manually.",
+          "options": [
+            {
+              "label": "No limit"
+            },
+            {
+              "label": "Automatic"
+            },
+            {
+              "label": "Custom"
+            }
+          ]
+        },
+        {
+          "label": "Height limit",
+          "description": "Maximum height of the board in pixels."
         }
       ]
     },
