--- a/language/lv.json
+++ b/language/lv.json
@@ -82,6 +82,25 @@
         {
           "label": "Iestatīt džokeru",
           "description": "Novietos neapgriežamu džokeru dēļa centrā, ja tā izmērs ir nepāra."
+        },
+        {
+          "label": "Height limit mode",
+          "description": "Decide if you want to limit the board height to fit the visible area. Automatic detection may not be perfect depending on your website's setup, e.g. if it has sticky top navigation bars. Good custom values are hard to set manually.",
+          "options": [
+            {
+              "label": "No limit"
+            },
+            {
+              "label": "Automatic"
+            },
+            {
+              "label": "Custom"
+            }
+          ]
+        },
+        {
+          "label": "Height limit",
+          "description": "Maximum height of the board in pixels."
         }
       ]
     },
